# router/index.js
@@ -7,30 +7,9 @@ const authMiddleware = require("../middlewares/auth-middleware");
 const adminRouter = require("./admin");
 router.use("/admin", adminRouter);
 
-router.get("/health/data", async (req, res) => {
-  const { userId } = req.query;
-  if (!userId) {
-    return res.status(400).json({ error: "userId is required" });
-  }
-  // Пример данных
-  const data = {
-    userId,
-    pulse: 70,
-    activityLevel: 3,
-    stressLevel: 2,
-    sleepHours: 7,
-  };
-  res.status(200).json(data);
-});
+router.get("/health/data", userController.getMyHealthData);
 
-router.post("/health/data", async (req, res) => {
-  const { userId, pulse, activityLevel, stressLevel, sleepHours } = req.body;
-  if (!userId || !pulse || !activityLevel || !stressLevel || !sleepHours) {
-    return res.status(400).json({ error: "Invalid input data" });
-  }
-  // Пример обработки данных
-  res.status(201).json({ message: "Data successfully added" });
-});
+router.post("/health/data", userController.addMyHealthData);
 
 router.post(
   "/registration",
